dnl Process this file with autoconf to produce a configure script.
AC_INIT(gamp.nw)
AM_INIT_AUTOMAKE(gamp, 1.0)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_CHECK_PROGS(NOWEAVE,noweave,no)
if test "$NOWEAVE" = no; then
  AC_MSG_WARN(documentation cannot be built since notangle is not found)
fi
AC_CHECK_PROGS(NOTANGLE,notangle,no)
if test "$NOTANGLE" = no; then
  AC_MSG_ERROR(gamp cannot be built since notangle is not found)
fi
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_YACC
AM_PROG_LEX

AC_PROG_MAKE_SET
AC_PROG_INSTALL

AC_LANG_CPLUSPLUS

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_MSG_CHECKING(compiler flags for exceptions)
cxx_exceptions_flag=null;
AC_TRY_COMPILE(,[throw "xxx";],
cxx_exceptions_flag=none)
if test $cxx_exceptions_flag = null; then
CXXFLAGS=-fhandle-exceptions
AC_TRY_COMPILE(,[throw "xxx";],
cxx_exceptions_flag=-fhandle-exceptions)
fi
AC_MSG_RESULT($cxx_exceptions_flag)
if test $cxx_exceptions_flag = none; then
cxx_exceptions_flag=" "
fi
AC_SUBST(cxx_exceptions_flag)

dnl Checks for library functions.
AC_FUNC_ALLOCA

AC_OUTPUT(Makefile)
